--- a/style/app.less
+++ b/style/app.less
@@ -41,8 +41,9 @@ div.posts { margin-top:15px;
 		h1, h2, h3, h4, h5, h6 { margin:30px 0 0 0; }
         p, pre { margin:15px 0 0 0; }
 		
-        h1 { color:@dark-header-colour; text-transform:uppercase; margin-top:8px; }
-        h2 { letter-spacing:0px; text-transform:none; margin-top:10px; }
+        h1 { color:@dark-header-colour; text-transform:uppercase; }
+        a>h1 { margin-top:8px; }
+        h2 { letter-spacing:0px; text-transform:none; }
         h5 { color:@dark-subheader-colour; font-weight:normal; }
 
         div.info { color:#909090; font-size:12px;
